--- a/frontend/user/templates/user_base.html
+++ b/frontend/user/templates/user_base.html
@@ -9,12 +9,7 @@
         <li><a href="/audience/insights">Audience Insights</a></li>
         <li><a href="/meta/connect">Connect Meta Ads Account</a></li>
         <li><a href="/campaigns/buy">Buy Campaign</a></li>
-
-        <li class="sidebar-disabled">
-            <span>Reports</span>
-            <small class="badge">Coming Soon</small>
-        </li>
-
+        <li><a href="/reports">Reports</a></li>
         <li><a href="/billing">Billing & Plans</a></li>
         <li><a href="/settings">Settings</a></li>
     </ul>
